--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,10 @@ nav{
   justify-self: end;
 }
 
+/*********************************************************/
+/*****************                       *****************/
+/*****************                       *****************/
+/*********************************************************/
 section{
   display: flex;
   height: 80vh;
@@ -104,7 +108,40 @@ section{
 }
 
 
-/*Navbar*/
+
+/*********************************************************/
+/*****************    Effect      *****************/
+/*****************                       *****************/
+/*********************************************************/
+
+.effect-cv{
+  display: flex;
+  justify-content: space-around;
+  height: 100vh;
+}
+
+.distortion{
+  width: 334px;
+  height: 501px;
+  align-self: flex-end;
+}
+
+.img-intro{
+  align-self: center;
+}
+
+.img-intro h2{
+  font-size: 50px;
+}
+
+.img-intro p{
+  font-size: 25px;
+}
+
+/*********************************************************/
+/*****************    Media Queries      *****************/
+/*****************                       *****************/
+/*********************************************************/
 @media screen and (max-width: 768px){
   .line{
     width: 30px;
@@ -164,3 +201,5 @@ section{
     opacity: 1;
   }
 }
+
+
