--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ body {
 .navbar ul li a {
   color: black;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .navbar-brand img {
@@ -112,6 +113,7 @@ section {
   padding-bottom: 25px;
   border-radius: 2px;
   color: white;
+  margin-top: -5px;
 }
 
 .content1 span{
@@ -244,6 +246,16 @@ button {
   width: 100%;
   background-color: #ddd;
   border-radius: 15px;
+}
+
+.skills1{
+  float: left;
+  width: 50%;
+}
+
+.skills2{
+  float: left;
+  width: 50%;
 }
 
 .skills {
