--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,7 @@ body {
   background: rgb(255, 255, 255);
   font-family: Sofia, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
   min-height: 100vh;
-  margin-left: 100px;
-  margin-right: 100px;
+
 }
 
 * {
@@ -144,8 +143,8 @@ button {
 .distortion {
   align-self: flex-end;
   border: 1px black;
-  max-width: 100%;
-  height: auto;
+  width: 500;
+  height: 250;
 }
 
 .img-intro {
@@ -154,6 +153,7 @@ button {
 
 .img-intro h2 {
   font-size: 50px;
+  padding-bottom: 5px;
 }
 
 .img-intro p {
@@ -240,6 +240,11 @@ button {
 .competences img {
   width: 65px;
   height: 65px;
+}
+
+.content{
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .cont {
