ajout repertoire components

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+@import "components/nav.css";
+@import "components/footer.css";
+@import "components/exp.css";
+@import "components/rea.css";
+@import "components/skills.css";
+
+
 body {
   background: rgb(255, 255, 255);
   font-family: Sofia, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
@@ -12,47 +19,6 @@ body {
 }
 
 
-/*********************************************************/
-/*****************         NAVBAR         *****************/
-/*****************                       *****************/
-/*********************************************************/
-
-.navbar {
-  width: 100%;
-  padding: 20px;
-  position: fixed;
-  top: 0px;
-  text-align: center;
-  transition: .5s;
-}
-
-.navbar ul li {
-  list-style-type: none;
-  display: inline-block;
-  padding: 10px 25px;
-  font-size: 20px;
-  font-family: sans-serif;
-  cursor: pointer;
-  border-radius: 10px;
-  transition: .5s;
-}
-
-.navbar ul li:hover {
-  color: black;
-  border: 1px solid black;
-}
-
-.navbar ul li a {
-  color: black;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.navbar-brand img {
-  width: 75px;
-  height: 75px;
-  border-radius: 5px;
-}
 
 
 /*********************************************************/
@@ -143,8 +109,8 @@ button {
 .distortion {
   align-self: flex-end;
   border: 1px black;
-  width: 500;
-  height: 250;
+  width: 500px;
+  height: 250px;
 }
 
 .img-intro {
@@ -161,302 +127,4 @@ button {
 }
 
 
-/*********************************************************/
-/*****************    Galerie section      *****************/
-/*****************                       *****************/
-/*********************************************************/
 
-
-.rea {
-  padding: 75px 0;
-  margin: 0 auto;
-  width: 1140px;
-}
-
-.rea h2 {
-  position: relative;
-  margin-bottom: 45px;
-  font-family: 'Oswald', sans-serif;
-  font-size: 44px;
-  text-transform: uppercase;
-  color: #424242;
-}
-
-.gallery-wrap {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 70vh;
-}
-
-.item {
-  flex: 1;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  background-repeat:no-repeat;
-  transition: flex 0.8s ease;
-}
-
-.item:hover{
-  flex: 7;
-}
-
-
-.item-1 {
-  background-image: url("../img/montage1.png");
-}
-
-.item-2 {
-  background-image: url("../img/montage2.png");
-}
-
-.item-3 {
-  background-image: url("../img/IMG_0001.jpg");
-}
-
-.item-4 {
-  background-image: url("../img/IMG_0252.jpg");
-}
-
-.item-5 {
-  background-image: url("../img/IMG_0257.jpg");
-}
-
-/*********************************************************/
-/*****************    Compétences      *****************/
-/*****************                       *****************/
-/*********************************************************/
-
-.competences h2 {
-  position: relative;
-  margin-bottom: 45px;
-  font-family: 'Oswald', sans-serif;
-  font-size: 44px;
-  text-transform: uppercase;
-  color: #424242;
-}
-
-.competences img {
-  width: 65px;
-  height: 65px;
-}
-
-.content{
-  margin-left: 100px;
-  margin-right: 100px;
-}
-
-.cont {
-  width: 100%;
-  background-color: #ddd;
-  border-radius: 15px;
-}
-
-.skills1{
-  float: left;
-  width: 50%;
-}
-
-.skills2{
-  float: left;
-  width: 50%;
-}
-
-.skills {
-  border-radius: 15px;
-  text-align: right;
-  padding: 10px;
-  color: white;
-  margin-bottom: 1rem;
-}
-
-
-.php {
-  width: 65%;
-  background-color: #12CBC4;
-  animation: animate 3s 1;
-}
-
-.sql {
-  width: 60%;
-  background-color: #FDA7DF;
-  animation: animate 3s 1;
-}
-
-.skill_html_css {
-  width: 80%;
-  background-color: #ED4C67;
-  animation: animate 3s 1;
-}
-
-.skill_js {
-  width: 45%;
-  background-color: #009432;
-  animation: animate 3s 1;
-}
-
-.git {
-  width: 68%;
-  background-color: #F79F1F;
-  animation: animate 3s 1;
-}
-
-
-@keyframes animate {
-  from {
-    width: 0%;
-  }
-}
-/*********************************************************/
-/*****************   Expériences professionnelles********/
-/*****************                       *****************/
-/*********************************************************/
-
-.section_exp{
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  width: 100%;
-  margin-top: 150px;
-  padding-bottom: 20px;
-  margin: 20px auto;
-  box-shadow: 0px 0px 10px #bbb;
-  background-color: #fff;
-}
-
-.section_exp h2{
-  margin: 20px 0;
-  width: 90%;
-}
-
-.section_exp > div{
-  width: 90%;
-}
-
-.exp{
-  display: flex;
-  flex-flow: row wrap;
-  border-bottom: 1px solid #bbb;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-}
-.exp-info{
-  display: flex;
-  flex-flow: column wrap;
-}
-.exp-logo{
-  flex: 0 0 25%;
-  max-width: 100px;
-}
-.exp-info{
-  flex: 0 0 70%;
-  margin-left: auto;
-}
-.exp img{
-  width: 100%;
-}
-.exp h3{
-  font-size:  1.2em;
-}
-.exp h4{
-  font-size:  1em;
-  font-weight: normal;
-}
-
-/*********************************************************/
-/*****************   FOOTER                       ********/
-/*****************                       *****************/
-/*********************************************************/
-
-
-.footer-basic-centered{
-  background-color: #000000;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
-  width: 100%;
-  text-align: center;
-  font: normal 18px sans-serif;
-
-  padding: 45px;
-  margin-top: 80px;
-}
-
-.footer-basic-centered .footer-company-motto{
-  color:  #ffffff;
-  font-size: 24px;
-  font-weight: bold;
-  margin: 0;
-  margin-bottom: 35px;
-}
-
-.footer-basic-centered .footer-company-name{
-  color:  #8f9296;
-  font-size: 14px;
-  margin: 0;
-}
-
-.footer-basic-centered .footer-links{
-  list-style: none;
-  font-weight: bold;
-  color:  #ffffff;
-  padding: 35px 0 23px;
-  margin: 0;
-}
-
-.footer-basic-centered .footer-links a{
-  display:inline-block;
-  text-decoration: none;
-  color: inherit;
-}
-
-.social-media{
-  color:white;
-  margin-top: 25px;
-}
-
-.social-media i{
-  margin-right: 25px;
-}
-
-
-.download {
-  text-decoration: none;
-  color: #FF0067;
-  background-color: white;
-  border: 4px solid #FF0067;
-  margin-top: 10px;
-  padding: 10px;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-}
-
-.download:hover {
-  background-color: #FF0067;
-  color: white;
-}
-/* If you don't want the footer to be responsive, remove these media queries */
-
-@media (max-width: 600px) {
-
-  .footer-basic-centered{
-    padding: 35px;
-  }
-
-  .footer-basic-centered .footer-company-motto{
-    font-size: 18px;
-  }
-
-  .footer-basic-centered .footer-company-name{
-    font-size: 12px;
-  }
-
-  .footer-basic-centered .footer-links{
-    font-size: 14px;
-    padding: 25px 0 20px;
-  }
-
-  .footer-basic-centered .footer-links a{
-    line-height: 1.8;
-  }
-}
